AHC-1259: fixed the label on the location input. css to align the fields

--- a/app/assets/stylesheets/components/_input-search.scss
+++ b/app/assets/stylesheets/components/_input-search.scss
@@ -65,6 +65,19 @@
   }
 }
 
+@media only screen and (min-width: 1023px) {
+  .search-box label {
+    min-width: 150px;
+    text-align: right;
+  }
+
+  html:lang(es) {
+    .search-box label {
+      min-width: 210px; // "Necesito" is wider
+    }
+  }
+}
+
 .input-search-big {
   @include input-placeholder(midtone($black, 0.2), italic);
   position: relative;
@@ -84,7 +97,7 @@
 
     height: 50px;
     padding: 10px;
-    padding-right: 144px;
+    padding-right: 10px;
     margin: 0 0 0 1em;
     font-size: $font_size_110;
     vertical-align:middle;
